--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <link rel="stylesheet" href="css/style.css">
 
     <title>Book Search Website (Bootstrap)</title>
 </head>
 
 <body>
-    <header>
-        <!-- Navbar -->
-        <!-- <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top"> -->
+    <!-- Navbar -->
+    <div class="container pt-5">
         <nav class="navbar navbar-expand-lg bg-brown navbar-dark py-3 fixed-top">
             <div class="container">
-                <a href="#" class="navbar-brand">Frontend Bootcamp</a>
+                <a href="#" class="navbar-brand">Miguel's Reads</a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
                     <span class="navbar-toggler-icon"></span>
@@ -24,21 +24,73 @@
 
                 <div class="collapse navbar-collapse" id="navmenu">
                     <ul class="navbar-nav  ms-auto">
+                        <!-- Do not forget to change the links -->
                         <li class="nav-item">
-                            <a href="#learn" class="nav-link">What You'll Learn</a>
+                            <a href="#learn" class="nav-link">Search a Book</a>
                         </li>
 
                         <li class="nav-item">
-                            <a href="#questions" class="nav-link">Questions</a>
+                            <a href="#questions" class="nav-link">By Author</a>
                         </li>
 
                         <li class="nav-item">
-                            <a href="#instructors" class="nav-link">Instructors</a>
+                            <a href="#instructors" class="nav-link">By Genre</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a href="#instructors" class="nav-link">By Language</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
-    </header>    
+    </div>
+
+    <!-- Book Selector -->
+    <section class="p-5">
+        <div class="container">
+            <!-- Change it to datalist -->
+            <!-- Do not forget to add the javascript to add all the items to the select -->
+            <select class="form-select input-sm">
+                <option selected>Open this select menu</option>
+                <option value="1">One</option>
+                <option value="2">Two</option>
+                <option value="3">Three</option>
+            </select>
+        </div>
+    </section>
+
+    <!-- Book Display Area -->
+    <section class="p-5">
+        <div class="container">
+            <div class="row align-items-center justify-content-between">
+
+                <!-- Book Cover -->
+                <div class="col-md">
+                    <img src="" alt="" class="img-fluid">
+                </div>
+
+                <!-- Details -->
+                <div class="col-md">
+                    <p class="lead" id="book-title">Title</p>
+                    <p class="lead" id="book-author">Author</p>
+                    <p class="lead" id="book-genre">Genre</p>
+                    <p class="lead" id="book-language">Language</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="pt-5">
+        <nav class="navbar navbar-expand-lg bg-brown navbar-dark py-3 fixed-bottom">
+            <div class="container justify-content-center">
+                <p class="lead text-light">Copyright &copy;2022 Miguel Bezerra</p>
+            </div>
+        </nav>
+    </footer>
+
+    <script src="main.js"></script>
+
 </body>
 </html>
